# biomeOS

./: .beacon.seed  .documentation_complete  .family.seed  .final_session_summary  .git-commit-message-cleanup.txt  .git-commit-message-ports.txt  .git-commit-message.txt  .gitattributes  .gitignore  .known_beacons.json  .lineage.json  .lineage.seed  .project-status  AGENTIC_BOOT_INFRASTRUCTURE.md  AGENTREAGENTS_INTEGRATION.md  ALL_PRIMALS_GENOMES_VALIDATED_UNIBIN.md  API_EVOLUTION_AGNOSTIC_RESPONSE_HANDLING.md  ARCHITECTURAL_BOUNDARIES_AND_EVOLUTION.md  ARCHITECTURAL_CLARITY_NEURAL_API_EVOLUTION_ENGINE_JAN_24_2026.md  ARCHITECTURE_EVOLUTION.md  ARCHITECTURE_UPDATE_JAN13_TOADSTOOL_BARRACUDA.md  ARCHIVE_CLEANUP_COMPLETE.md  ARCHIVE_CODE_CLEANUP_ASSESSMENT.md  ARCHIVE_CODE_REVIEW_JAN13.md  ARCHIVE_PLAN_JAN30_2026.md  ARM_CROSS_COMPILATION_STRATEGY_JAN_17_2026.md  ARM_DEPLOYMENT_RESPONSIBILITIES.md  ATOMIC_DEPLOYMENT_FOR_PETALTONGUE.md  ATOMIC_VALIDATION_DEPLOYMENT_JAN_19_2026.md  AUDIT_SUMMARY_DEC_27_2025.md  BEARDOG_ALREADY_COMPLETE_GENOMES_REBUILT.md  BEARDOG_BLOCKER_RESOLVED.md  BEARDOG_DEBUG_GUIDANCE_JAN_22_2026.md  BEARDOG_GENOMEBIN_HARDENING_COMPLETE.md  BEARDOG_HTTP_STATUS_COMPLETE_JAN_3_2026.md  BEARDOG_PROGRESSIVE_TRUST_COMPLETE_JAN_3_2026.md  BEARDOG_SHA384_EVOLUTION_HANDOFF.md  BEARDOG_UNIBIN_STATUS_AND_HANDOFF_JAN_19_2026.md  BEARDOG_V0_14_0_HARVEST_REPORT_JAN_22_2026.md  BEARDOG_V0_18_0_STATUS.md  (+507 more)
biomeos-desktop/: Cargo.toml
community-examples/api-gateway/: Cargo.toml  README.md
community-examples/api-gateway/examples/: basic_usage.rs
community-examples/api-gateway/src/: lib.rs  main.rs
community-examples/api-gateway/tests/: integration_test.rs
community-examples/game-engine/: Cargo.toml  README.md
community-examples/game-engine/examples/: basic_usage.rs
community-examples/game-engine/src/: lib.rs  main.rs
community-examples/game-engine/tests/: integration_test.rs
community-examples/hello-world/: Cargo.toml  README.md
community-examples/hello-world/examples/: basic_usage.rs
community-examples/hello-world/src/: lib.rs  main.rs
community-examples/hello-world/tests/: integration_test.rs
community-examples/ml-processor/: Cargo.toml  README.md
community-examples/ml-processor/examples/: basic_usage.rs
community-examples/ml-processor/src/: lib.rs  main.rs
community-examples/ml-processor/tests/: integration_test.rs
crates/biomeos-api/: Cargo.toml
crates/biomeos-api/src/: beacon_verification.rs  beacon_verification_tests.rs  dark_forest_gate.rs  lib.rs  lib_tests.rs  main.rs  state.rs  unix_server.rs  unix_server_tests.rs  websocket.rs  websocket_tests.rs
crates/biomeos-api/tests/: discovery_handler_tests.rs  sovereign_mesh_crypto.rs  sovereign_mesh_e2e.rs  sovereign_mesh_phase1.rs  sovereign_mesh_phase2.rs  sovereign_mesh_phase3.rs  sovereign_mesh_phase4.rs  sovereign_mesh_phase5.rs  sovereign_mesh_phase6.rs  sovereign_pen_access.rs  sovereign_pen_discovery.rs  sovereign_pen_headers_response.rs  sovereign_pen_health_paths.rs  sovereign_pen_http_methods.rs  sovereign_pen_payloads.rs  sovereign_pen_tests.rs  sovereign_pen_tokens.rs  websocket_integration.rs  websocket_integration.rs.disabled
crates/biomeos-atomic-deploy/: Cargo.toml
crates/biomeos-atomic-deploy/src/: beardog_jwt_client.rs  bootstrap.rs  capability_domains.rs  capability_domains_tests.rs  capability_handlers.rs  capability_translation.rs  capability_translation_integration_tests.rs  capability_translation_tests.rs  deployment_graph.rs  gate_registry.rs  health_check.rs  http_client.rs  http_client_tests.rs  lib.rs  lifecycle_manager.rs  living_graph.rs  mode.rs  neural_api_server.rs  neural_executor.rs  neural_executor_async_tests.rs  neural_executor_async_tests2.rs  neural_executor_node_impls.rs  neural_executor_rollback.rs  neural_executor_rollback_capability_tests.rs  neural_executor_rollback_lifecycle_tests.rs  neural_executor_rollback_order_tests.rs  neural_executor_rollback_tests.rs  neural_executor_tests.rs  neural_executor_utility_tests.rs  neural_graph.rs  neural_graph_cross_gate_tests.rs  neural_graph_tests.rs  neural_router.rs  neural_router_tests.rs  nucleation.rs  orchestrator.rs  orchestrator_tests.rs  primal_communication.rs  primal_coordinator.rs  primal_discovery.rs  (+5 more)
crates/biomeos-atomic-deploy/tests/: capability_translation_test.rs  chaos_tests.rs  cross_spring_pipeline_e2e.rs  fault_injection_tests.rs  fault_injection_tests.rs.disabled  graph_execution_tests.rs  integration_tests.rs  neural_api_routing_tests.rs  (+6 more)
crates/biomeos-boot/: Cargo.toml
crates/biomeos-chimera/: Cargo.toml
crates/biomeos-cli/: Cargo.toml
crates/biomeos-compute/: Cargo.toml
crates/biomeos-core/: Cargo.toml  lib.rs
crates/biomeos-deploy/: Cargo.toml
crates/biomeos-federation/: Cargo.toml
crates/biomeos-genome-deploy/: Cargo.toml
crates/biomeos-genome-extract/: Cargo.toml
crates/biomeos-genome-factory/: Cargo.toml
crates/biomeos-genomebin-v3/: Cargo.toml  bootstrap-selector.sh  universal-extractor.sh
crates/biomeos-graph/: Cargo.toml
crates/biomeos-kernel/: Cargo.toml
crates/biomeos-manifest/: Cargo.toml
crates/biomeos-niche/: Cargo.toml
crates/biomeos-nucleus/: Cargo.toml
crates/biomeos-primal-sdk/: Cargo.toml
crates/biomeos-pseudospore/: Cargo.toml
federation/: Cargo.toml
federation/src/: main.rs  modules.rs
tools/: Cargo.toml  test-runner.sh  update_livespore_with_biomeos.sh
tools/harvest/: Cargo.toml  README.md
tools/src/: demos.rs  health.rs  integration.rs  lib.rs  testing.rs
ui/: Cargo.toml
ui/src/: api.rs  app.rs  backend.rs  byob_monitor.rs  iso_monitor.rs  lib.rs  main.rs  minimal_app.rs  minimal_main.rs  niche_monitor.rs  state.rs  system_monitor.rs
validation/: CAPABILITIES.md  Cargo.toml  DEPLOYMENT.md  FEDERATION_VALIDATION.md  README.md  TOPOLOGIES.md
validation/benchscale-topologies/: README.md  rootpulse-federation.yaml  rootpulse-local.yaml  usb-federation-test.yaml
validation/src/: capabilities.rs  deployment.rs  federation_validation.rs  lib.rs  mdns_validation.rs  primal_startup.rs  vm_types.rs
(+3785 files in other folders)
