[workspace]
resolver = "2"
members = [
    "crates/biomeos-types",
    "crates/biomeos-core",
    "crates/biomeos-cli",
    "crates/biomeos-manifest",
    "crates/biomeos-system",
    "crates/biomeos-primal-sdk",
    "crates/biomeos-ui",
    "federation",
    "ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["biomeOS Team"]
license = "MIT"
repository = "https://github.com/biomeOS/biomeOS"
homepage = "https://biomeOS.org"
documentation = "https://docs.biomeOS.org"
description = "biomeOS ecosystem workspace"
keywords = ["biomeos", "distributed", "sovereignty", "primals"]
categories = ["os", "distributed-systems", "virtualization"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }

# Async and futures
futures = "0.3"
async-trait = "0.1"

# Serialization
toml = "0.8"
bincode = "1.3"

# Utilities
itertools = "0.12"
once_cell = "1.19"
dashmap = "5.5"

# Networking
hyper = { version = "1.0", features = ["full"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Testing
mockall = "0.12"
tempfile = "3.8"
criterion = "0.5"

# Documentation
mdbook = "0.4"

# Additional dependencies
validator = "0.16"
dirs = "5.0"
libc = "0.2"
num_cpus = "1.16"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
tokio-test = "0.4"
walkdir = "2.4"
rfd = "0.14"
image = { version = "0.24", features = ["png", "jpeg"] }
env_logger = "0.11"
regex = "1.10"
gethostname = "0.5"

[package]
name = "biomeos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core BiomeOS components
biomeos-core = { path = "crates/biomeos-core" }
biomeos-types = { path = "crates/biomeos-types" }
biomeos-primal-sdk = { path = "crates/biomeos-primal-sdk" }
biomeos-manifest = { path = "crates/biomeos-manifest" }
biomeos-system = { path = "crates/biomeos-system" }
biomeos-ui = { path = "crates/biomeos-ui" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { workspace = true }
gethostname = "0.5"
clap = { workspace = true }
axum = { workspace = true }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
anyhow = "1.0"
tempfile = "3.0"
tracing-test = "0.2"
wiremock = "0.6"
rand = "0.8"

# Demo binaries disabled - require extensive type alignment beyond core unification scope
# These can be updated in a future iteration focused on demo and example alignment
# [[bin]]
# name = "byob-test"
# path = "src/bin/byob-test.rs"

# [[bin]]
# name = "clean_ecosystem_demo"
# path = "src/bin/clean_ecosystem_demo.rs"

[[example]]
name = "working_unified_demo"
path = "examples/working_unified_demo.rs"


