[workspace.lints.clippy]
# Deny unwrap/expect in production code to enforce proper error handling
unwrap_used = "deny"
expect_used = "deny"
# Lint groups with lower priority so individual overrides work
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Allow stylistic lints that are noisy without adding significant value
doc_markdown = "allow"             # BiomeOS, JSON-RPC, etc. don't need backticks internally
missing_errors_doc = "allow"       # Error handling is clear from Result types
missing_panics_doc = "allow"       # Panics are avoided via unwrap_used/expect_used warnings
uninlined_format_args = "allow"    # Format string style is a preference
module_name_repetitions = "allow"  # Module::ModuleThing is idiomatic in our codebase
similar_names = "allow"            # avg_cpu vs avg_gpu is intentionally similar
collapsible_if = "allow"           # let-chains preferred; fix incrementally (edition 2024)
must_use_candidate = "allow"       # Fix incrementally; too noisy for entire codebase at once
return_self_not_must_use = "allow" # Builders return Self; fix incrementally
missing_const_for_fn = "allow"     # Fix incrementally; many functions need const evaluation
cast_possible_truncation = "allow" # Handled case-by-case with explicit allow where needed
cast_precision_loss = "allow"      # f64 display values don't need full u64 precision
cast_sign_loss = "allow"           # Handled case-by-case
cast_lossless = "allow"            # Explicit casts for clarity
option_if_let_else = "allow"       # Style preference; match is often clearer
redundant_pub_crate = "allow"      # pub(crate) vs pub is a valid choice
significant_drop_tightening = "allow" # RwLock/Mutex scoping is intentional
struct_excessive_bools = "allow"   # Config structs legitimately have multiple bool fields
use_self = "allow"                 # Type::Method vs Self::Method is a style preference
unnecessary_wraps = "allow"        # Some Result wraps needed for trait conformance
items_after_statements = "allow"   # Const/type items near their usage is intentional
unused_async = "allow"             # Async trait methods may not await yet

[workspace]
resolver = "2"
members = [
    "crates/neural-api-client-sync",
    "crates/neural-api-client",
    "crates/biomeos-genome-deploy",
    "crates/biomeos",  # NEW UniBin!
    "crates/biomeos-types",
    "crates/biomeos-core",
    "crates/biomeos-cli",
    "crates/biomeos-api",
    "crates/biomeos-manifest",
    "crates/biomeos-system",
    "crates/biomeos-primal-sdk",
    "crates/biomeos-chimera",
    "crates/biomeos-niche",
    "crates/biomeos-spore",  # USB spore system (orchestration only, BearDog handles crypto)
    "crates/biomeos-federation",  # Hierarchical federation and sub-federation management
    "crates/biomeos-compute",  # Isomorphic & fractal compute architecture
    "crates/biomeos-graph",  # Graph-based orchestration for Neural API
    "crates/biomeos-ui",  # Interactive UI orchestration - network effect of multiple primals
    # "ui",  # Archived 2025-12-23: UI evolved into petalTongue primal (../petalTongue/)
    # Showcase crates archived - moved to showcase/ directory history
    # "showcase/03-p2p-coordination/01-btsp-tunnel-coordination",
    # "showcase/03-p2p-coordination/02-birdsong-encryption",
    # "showcase/03-p2p-coordination/03-lineage-gated-relay",
    # "showcase/03-p2p-coordination/04-multi-tower-federation",
    # "showcase/03-p2p-coordination/05-full-ecosystem-integration",
    "crates/biomeos-boot",
    "crates/biomeos-deploy", "crates/biomeos-test-utils", "crates/biomeos-nucleus",
    "crates/biomeos-atomic-deploy",  # Genetic lineage atomic deployment (modern Rust, no bash)
    "crates/biomeos-genomebin-v3",  # NEW: genomeBin v3.0 - TRUE binary isomorphic format
    "crates/biomeos-genome-factory",  # NEW: Genome Factory - Universal genomeBin production
]
exclude = [
    "tools",    # Standalone workspace for dev/integration tools
    "tools/harvest",  # Standalone workspace for genomeBin harvesting
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["biomeOS Team"]
license = "AGPL-3.0-only"
repository = "https://github.com/biomeOS/biomeOS"
homepage = "https://biomeOS.org"
documentation = "https://docs.biomeOS.org"
description = "biomeOS ecosystem workspace"
keywords = ["biomeos", "distributed", "sovereignty", "primals"]
categories = ["os", "distributed-systems", "virtualization"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
serde_yaml = { package = "serde_yml", version = "0.0.12" }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.5", features = [] }
tower-http = { version = "0.5", features = ["cors"] }
# reqwest REMOVED for ecoBin v2.0 compliance (C bindings via openssl-sys)
# Use ureq for local HTTP (dev/tests) or BiomeOsHttpClient/Songbird for production HTTPS.
# default-features = false avoids ureq/tls → rustls → ring (ecoBin: no C/asm crypto).
# Production HTTP/HTTPS: delegate to Songbird via BiomeOsHttpClient (Unix socket).
ureq = { version = "2.9", default-features = false, features = ["json"] }

# benchScale is an external tool (ecoPrimals/primalTools/benchscale)
# Should be invoked as a separate binary, not a hard dependency
# benchscale = { path = "../../../primalTools/benchscale", features = ["libvirt"] } # REMOVED

# Async and futures
futures = "0.3"
async-trait = "0.1"

# Serialization
toml = "0.8"
bincode = "1.3"

# RPC frameworks (JSON-RPC + tarpc for performance escalation)
tarpc = { version = "0.37", features = ["serde-transport", "serde-transport-bincode", "tokio1", "unix"] }
tokio-serde = { version = "0.9", features = ["bincode"] }

# Utilities
itertools = "0.12"
dashmap = "5.5"

# Networking
hyper = { version = "1.0", features = ["full"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Testing
tempfile = "3.8"
criterion = "0.5"
temp-env = "0.3"

# Documentation
mdbook = "0.4"

# Additional dependencies
validator = "0.16"
# dirs = "5.0"  # DEPRECATED: Uses dirs-sys (C dependency)
etcetera = "0.8"  # Pure Rust replacement for dirs

num_cpus = "1.16"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
tokio-test = "0.4"
walkdir = "2.4"
# REMOVED: rfd (native file dialogs — unused, pulls C deps)
# REMOVED: image (unused in workspace — no member references it)
env_logger = "0.11"
regex = "1.10"
gethostname = "0.5"

[package]
name = "biomeos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
doc = false

[dependencies]
# Core BiomeOS components
biomeos-core = { path = "crates/biomeos-core", version = "0.1.0" }
biomeos-types = { path = "crates/biomeos-types", version = "0.1.0" }
biomeos-primal-sdk = { path = "crates/biomeos-primal-sdk", version = "0.1.0" }
biomeos-manifest = { path = "crates/biomeos-manifest", version = "0.1.0" }
biomeos-system = { path = "crates/biomeos-system", version = "0.1.0" }
biomeos-chimera = { path = "crates/biomeos-chimera", version = "0.1.0" }
biomeos-atomic-deploy = { path = "crates/biomeos-atomic-deploy", version = "0.1.0" }
biomeos-niche = { path = "crates/biomeos-niche", version = "0.1.0" }
biomeos-spore = { path = "crates/biomeos-spore", version = "0.1.0" }
biomeos-graph = { path = "crates/biomeos-graph", version = "0.1.0" }  # Neural API graph orchestration
# biomeos-ui = { path = "crates/biomeos-ui" }  # Archived 2025-12-23

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = { workspace = true }
uuid = { workspace = true }
gethostname = "0.5"
clap = { workspace = true }
axum = { workspace = true }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client - DEPRECATED: Use Songbird/BearDog for HTTP/TLS
# reqwest = { version = "0.11", features = ["json"] } # REMOVED - Use atomic_client

# benchScale is an external tool (ecoPrimals/primalTools/benchscale)
# Should be invoked as a separate binary, not a hard dependency
# benchscale = { path = "../../primalTools/benchscale", features = ["libvirt"] } # REMOVED
# dirs = "5.0"  # DEPRECATED: Uses dirs-sys (C dependency)
etcetera = "0.8"  # Pure Rust replacement for dirs

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = "0.4"
anyhow = "1.0"
tempfile = "3.0"
tracing-test = "0.2"
wiremock = "0.6"
rand = "0.8"
biomeos-test-utils = { path = "crates/biomeos-test-utils", version = "0.1.0" }

[[example]]
name = "chimera_registry_demo"
path = "examples/chimera_registry_demo.rs"

[[example]]
name = "full_ecosystem_demo"
path = "examples/full_ecosystem_demo.rs"



[[example]]
name = "benchscale_p2p_test"
path = "examples/benchscale_p2p_test.rs"

# =============================================================================
# Release Profile (workspace-wide)
# =============================================================================
# NOTE: Profile settings MUST be at workspace root (non-root profiles are ignored)
[profile.release]
strip = false   # Keep symbols for debugging
lto = true      # Link-time optimization for smaller binaries
panic = "abort"  # No unwinding — faster and smaller (critical for init/PID 1)
