[package]
name = "biomeos-desktop"
version = "1.0.0"
edition = "2021"
description = "BiomeOS Desktop - Clean OS-like interface for orchestrating ecosystem primals"

[[bin]]
name = "biomeos-desktop"
path = "src/main.rs"

[dependencies]
# Core dependencies - minimal and stable
eframe = "0.27"
egui = "0.27"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# No dependencies on problematic UI crates - completely standalone 