[package]
name = "biome-federation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "BiomeOS Federation CLI for basement tower deployment"
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "biome-federation"
path = "src/main.rs"

[dependencies]
biomeos-core = { path = "../crates/biomeos-core", version = "0.1.0" }
biomeos-types = { path = "../crates/biomeos-types", version = "0.1.0" }
biomeos-manifest = { path = "../crates/biomeos-manifest", version = "0.1.0" }
biomeos-system = { path = "../crates/biomeos-system", version = "0.1.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# HTTP client DEPRECATED: Use atomic_client (Unix sockets) for federation communication
# reqwest = { workspace = true } # REMOVED - Use Songbird/BearDog for HTTP
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
config = { workspace = true }
validator = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
# dirs = { workspace = true }  # DEPRECATED: Uses dirs-sys (C dependency)
etcetera = { workspace = true }  # Pure Rust replacement
num_cpus = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
ctrlc = "3.4"
toml = "0.8" 