[workspace]
# This package is not part of the parent workspace

[package]
name = "biomeos-tools"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license.workspace = true
description = "biomeOS development and integration tools - Rust until the very edge"

[[bin]]
name = "integration-test-runner"
path = "src/bin/integration_test_runner.rs"

[[bin]]
name = "all-demos"
path = "src/bin/all_demos.rs"

[[bin]]
name = "test-coverage"
path = "src/bin/test_coverage.rs"

[[bin]]
name = "ecosystem-health"
path = "src/bin/ecosystem_health.rs"

[[bin]]
name = "songbird_universal_ui_demo"
path = "src/bin/songbird_universal_ui_demo.rs"

[[bin]]
name = "comprehensive_ecosystem_demo"
path = "src/bin/comprehensive_ecosystem_demo.rs"

# Archived - violated TRUE PRIMAL (used TCP ports)
# [[bin]]
# name = "mock_primal_server"
# path = "src/bin/mock_primal_server.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Networking - DEPRECATED: Use atomic_client (Unix sockets) for primal communication
# reqwest = { version = "0.11", features = ["json"] } # REMOVED - Testing tools should use atomic_client

# File system operations
tempfile = { workspace = true }
walkdir = { workspace = true }

# biomeOS integration
biomeos-core = { path = "../crates/biomeos-core" }

# Testing
tokio-test = { workspace = true }
criterion = { workspace = true } 