[workspace]
# Standalone workspace — does not inherit from parent biomeOS workspace.

[workspace.package]
authors = ["biomeOS Team"]
license = "AGPL-3.0-or-later"
rust-version = "1.87"

[package]
name = "biomeos-tools"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "biomeOS development and integration tools - Rust until the very edge"

[[bin]]
name = "integration-test-runner"
path = "src/bin/integration_test_runner.rs"

[[bin]]
name = "all-demos"
path = "src/bin/all_demos.rs"

[[bin]]
name = "test-coverage"
path = "src/bin/test_coverage.rs"

[[bin]]
name = "ecosystem-health"
path = "src/bin/ecosystem_health.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
walkdir = "2.4"
tokio-test = "0.4"
criterion = "0.5"

biomeos-core = { path = "../crates/biomeos-core" } 