[package]
name = "biomeos-ui-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "biomeOS Bootstrap UI - Sovereignty-first ecosystem management interface"

[[bin]]
name = "biomeos-ui"
path = "src/main.rs"

[[bin]]
name = "biomeos-desktop"
path = "src/minimal_main.rs"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UI framework
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27.2", features = ["default"] }
egui_plot = "0.27"
rfd = { workspace = true }

# biomeOS integration
biomeos-core = { path = "../crates/biomeos-core" }
biomeos-primal-sdk = { path = "../crates/biomeos-primal-sdk" }
biomeos-ui = { path = "../crates/biomeos-ui" }
biomeos-types = { path = "../crates/biomeos-types" }

# System information
num_cpus = { workspace = true }

# Random number generation for simulated metrics
rand = "0.8"

# Additional UI enhancements
image = { version = "0.24", features = ["png", "jpeg"] }
reqwest = { workspace = true }
env_logger = "0.11"

# Workspace dependencies for interacting with other Primals (when ready)
# toadstool-api = { path = "../../toadstool/crates/api" }
# songbird-api = { path = "../../songbird/crates/api" }
# nestgate-api = { path = "../../nestgate/crates/api" }

# Additional dependencies
regex = "1.10"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true } 