[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"
authors = ["API Team <api@example.com>"]
license = "MIT"
description = "RESTful API gateway for BiomeOS services"
homepage = ""
repository = ""
keywords = ["biomeos", "primal"]

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
tokio = "1.0"
async-trait = "0.1"
chrono = "0.4"
axum = "0.7"
serde = "1.0"
reqwest = "0.11"
anyhow = "1.0"
biomeos-primal-sdk = "0.1.0"
uuid = "1.0"
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
testing = []
default = []

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
