[package]
name = "ml-processor"
version = "0.1.0"
edition = "2021"
authors = ["ML Team <ml@example.com>"]
license = "MIT"
description = "Machine learning task processor"
homepage = ""
repository = ""
keywords = ["biomeos", "primal"]

[[bin]]
name = "ml-processor"
path = "src/main.rs"

[dependencies]
biomeos-primal-sdk = "0.1.0"
serde_json = "1.0"
uuid = "1.0"
tracing = "0.1"
anyhow = "1.0"
chrono = "0.4"
serde = "1.0"
tokio = "1.0"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[features]
testing = []
default = []

[profile.release]
opt-level = 2
lto = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
