[package]
name = "biomeos-api"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"

# HTTP server (for Unix socket support)
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal dependencies
# NOTE: http-transport feature REMOVED - using Unix sockets for primal communication
biomeos-core = { path = "../biomeos-core" }
biomeos-types = { path = "../biomeos-types" }
biomeos-graph = { path = "../biomeos-graph" }
biomeos-spore = { path = "../biomeos-spore" }
biomeos-genome-factory = { path = "../biomeos-genome-factory" }
biomeos-genomebin-v3 = { path = "../biomeos-genomebin-v3" }

# Async utilities
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client REMOVED - Using Unix socket JSON-RPC for primal discovery
# External HTTP/HTTPS requests should go through Songbird

# Configuration
config = "0.14"

# Utilities
# DEEP DEBT: lazy_static replaced by std::sync::OnceLock; dirs replaced by etcetera (pure Rust)
etcetera = "0.8"
semver = "1.0"
base64 = "0.22"

# WebSocket support (JSON-RPC 2.0 over WebSocket)
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
http-body-util = "0.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tempfile = "3"
