[package]
name = "biomeos-api"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-only"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { workspace = true, features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "limit"] }

# Async runtime
tokio = { workspace = true }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures = "0.3"

# HTTP server (for Unix socket support)
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Internal dependencies
# NOTE: http-transport feature REMOVED - using Unix sockets for primal communication
biomeos-core = { path = "../biomeos-core", version = "0.1.0" }
biomeos-types = { path = "../biomeos-types", version = "0.1.0" }
biomeos-graph = { path = "../biomeos-graph", version = "0.1.0" }
biomeos-spore = { path = "../biomeos-spore", version = "0.1.0" }
biomeos-genome-factory = { path = "../biomeos-genome-factory", version = "1.0.0" }
biomeos-genomebin-v3 = { path = "../biomeos-genomebin-v3", version = "3.0.0" }
neural-api-client = { path = "../neural-api-client" }

# Async utilities
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP client REMOVED - Using Unix socket JSON-RPC for primal discovery
# External HTTP/HTTPS requests should go through Songbird

# Configuration
config = "0.14"

# Utilities
# DEEP DEBT: lazy_static replaced by std::sync::OnceLock; dirs replaced by etcetera (pure Rust)
etcetera = "0.8"
semver = "1.0"
base64 = { workspace = true }

# WebSocket support (JSON-RPC 2.0 over WebSocket)
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-stream = "0.3.6"

[dev-dependencies]
biomeos-test-utils = { path = "../biomeos-test-utils", version = "0.1.0" }
# Testing utilities
tokio-test = "0.4"
http-body-util = "0.1"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tempfile = "3"

[lints]
workspace = true
